creation front page accueil

--- a/front/src/css/main.css
+++ b/front/src/css/main.css
@@ -1,4 +1,6 @@
 @import "./screens/Home.css";
 @import "./components/Navbar.css";
+@import "./screens/SummonnerDetails.css";
+@import "./screens/Champions.css"
 
 
