--- a/front/src/css/screens/Home.css
+++ b/front/src/css/screens/Home.css
@@ -11,7 +11,7 @@
     align-items: center;
     border: 2px solid #ccc;
     border-radius: 50px;
-    overflow: hidden;
+    /* overflow: hidden; */
     background-color: #fff;
     width: 500px;
     border: 2px solid black;
