--- a/front/src/css/screens/Home.css
+++ b/front/src/css/screens/Home.css
@@ -11,11 +11,41 @@
     align-items: center;
     border: 2px solid #ccc;
     border-radius: 50px;
-    /* overflow: hidden; */
     background-color: #fff;
-    width: 500px;
+    width: 800px;
     border: 2px solid black;
+    height: 60px;
+    position:relative;
+}
 
+.region-selector{
+    display: flex;
+    flex-direction: column;
+    width: 30%;
+    margin-left: 10%;
+    
+}
+.region-selector label{
+    font-size: 1rem;
+    font-weight: bold;
+    transition: color 0.3s ease;
+    margin-left: 2px;
+    margin-bottom: 10px;
+
+}
+
+.region-selector select{
+    border: none;
+    width: 50%;
+    color: gray;
+    font-size: 1rem;
+}
+
+
+.region-selector select:focus {
+    border-color: black;
+    outline: none; 
+    box-shadow: none; 
 }
 
 .main-search{
@@ -27,8 +57,6 @@
     outline: none;
     border-left: 2px solid black;
     border-right: 2px solid black;
-
-
 }
 
 .button-container {
@@ -61,59 +89,3 @@ h1{
     color: whitesmoke;
 }
 
-nav {
-    margin-top: 0;
-}
-
-nav ul.menu {
-    list-style-type: none;
-    padding: 0;
-    margin: 0;
-}
-
-nav ul.menu > li {
-    position: relative;
-    display: inline-block;
-    margin-right: 20px;
-    cursor: pointer;
-}
-
-nav ul.menu > li > a {
-    text-decoration: none;
-    color: black;
-    padding: 10px 20px;
-    display: block;
-}
-
-nav ul.menu > li:hover .sous,
-nav ul.menu > li:focus-within .sous {
-    display: block;
-}
-
-.deroulant .sous {
-    display: none;
-    position: absolute;
-    top: 100%;
-    left: 0;
-    background-color: white;
-    box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.2);
-    z-index: 1;
-    min-width: 150px;
-    padding: 0;
-    border-radius: 0 0 50px 50px;
-}
-
-.deroulant .sous li {
-    display: block;
-    padding: 10px;
-}
-
-.deroulant .sous li a {
-    text-decoration: none;
-    color: black;
-    display: block;
-}
-
-.deroulant .sous li:hover {
-    background-color: #f1f1f1;
-}
