--- a/front/src/css/main.css
+++ b/front/src/css/main.css
@@ -1,6 +1,6 @@
 @import "./screens/Home.css";
 @import "./components/Navbar.css";
-@import "./screens/SummonnerDetails.css";
+@import "./screens/Profile.css";
 @import "./screens/Champions.css"
 
 
